# localist

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: report-stale.yml  suggest-tool.yml
.github/workflows/: ci.yml  daily-update.yml
data/: curated.yml  discovery.yml  seen.json  watchlist.yml
guides/: amd-gpu.md  choosing-models.md  cpu-only.md  glossary.md  mac-apple-silicon.md  nvidia-gpu.md  start-here.md
news/: 2026-07.md
scripts/: render.py  update_news.py
scripts/sources/: common.py  github_discoveries.py  tool_releases.py
tests/: test_changelog.py  test_discoveries.py  test_discovery_policy.py  test_render.py  test_repo_integrity.py  test_sanitize.py  test_tool_releases_fetch.py  test_update_news.py  test_watchlist.py
